Handle http error 404

--- a/src/main/webapp/templates/login.html
+++ b/src/main/webapp/templates/login.html
@@ -14,8 +14,9 @@
             <input class="offset-xs-1 col-xs-10 offset-md-2 col-md-8 form-control-lg form-control mb-1" type="password"
                    placeholder="Пароль" required="required" name="j_password">
             <button class="offset-xs-1 col-xs-10 offset-md-2 col-md-8 btn btn-lg btn-block btn-primary">Войти</button>
-            <div class="offset-xs-1 col-xs-10 offset-md-2 col-md-8 text-md-right text-xs-right"><a
-                    th:href="@{/recovery}">Забыли пароль?</a></div>
+            <div class="offset-xs-1 col-xs-10 offset-md-2 col-md-8 text-md-right text-xs-right">
+                <a th:href="@{/recovery}">Забыли пароль?</a>
+            </div>
         </div>
     </form>
 </div>
