--- a/src/main/webapp/templates/fragments/resources.html
+++ b/src/main/webapp/templates/fragments/resources.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link th:href="@{static/css/bootstrap.min.css}" rel="stylesheet">
-    <link th:href="@{static/css/bootstrap-flex.min.css}" rel="stylesheet">
-    <link th:href="@{static/css/bootstrap-grid.min.css}" rel="stylesheet">
-    <link th:href="@{static/css/bootstrap-reboot.min.css}" rel="stylesheet">
-    <link th:href="@{static/css/custom.css}" rel="stylesheet">
-    <link th:href="@{static/css/jquery.formstyler.min.css}" rel="stylesheet">
+    <link th:href="@{/static/css/bootstrap.min.css}" rel="stylesheet">
+    <link th:href="@{/static/css/bootstrap-flex.min.css}" rel="stylesheet">
+    <link th:href="@{/static/css/bootstrap-grid.min.css}" rel="stylesheet">
+    <link th:href="@{/static/css/bootstrap-reboot.min.css}" rel="stylesheet">
+    <link th:href="@{/static/css/custom.css}" rel="stylesheet">
+    <link th:href="@{/static/css/jquery.formstyler.min.css}" rel="stylesheet">
 
-    <script th:src="@{static/js/jquery-3.1.1.min.js}"></script>
-    <script th:src="@{static/js/jquery.formstyler.min.js}"></script>
-    <script th:src="@{static/js/util.js}"></script>
+    <script th:src="@{/static/js/jquery-3.1.1.min.js}"></script>
+    <script th:src="@{/static/js/jquery.formstyler.min.js}"></script>
+    <script th:src="@{/static/js/util.js}"></script>
 </head>
 </html>
