--- a/src/main/webapp/templates/registration.html
+++ b/src/main/webapp/templates/registration.html
@@ -7,9 +7,9 @@
 <body>
 <div th:include="fragments/header::body"></div>
 <div class="custom-container">
-    <div class="row" th:if="${errors}">
-        <div class="offset-xs-1 col-xs-10 offset-md-2 col-md-8 no-padding" th:each="error : ${errors}">
-            <div class="alert alert-danger" th:text="${error.code}"></div>
+    <div class="row" th:each="message : ${messages}">
+        <div class="offset-xs-1 col-xs-10 offset-md-2 col-md-8 no-padding">
+            <div class="alert alert-danger" th:classappend="'alert-' + ${message.type}" th:text="${message.text}"></div>
         </div>
     </div>
     <form autocomplete="off" action="#" th:action="@{/registration}" th:object="${accountForm}" method="post">
