--- a/src/main/webapp/templates/cloud.html
+++ b/src/main/webapp/templates/cloud.html
@@ -7,11 +7,7 @@
 <body>
 <div th:include="fragments/header::body"></div>
 <div class="custom-container">
-    <div class="row" th:if="${errors}">
-        <div class="offset-xs-1 col-xs-10 offset-md-3 col-md-6 no-padding">
-            <div class="alert alert-danger">Ошибка загрузки файла</div>
-        </div>
-    </div>
+    <meta th:include="/fragments/error::body">
     <form class="form-inline row mb-1 ml-1" method="POST" action="/cloud/save" enctype="multipart/form-data">
         <input class="offset-xs-0 offset-lg-2 text-xs-center required" type="file" id="mfile" name="file">
         <div class="col-lg-1"></div>
