--- a/src/main/webapp/templates/registration.html
+++ b/src/main/webapp/templates/registration.html
@@ -7,11 +7,7 @@
 <body>
 <div th:include="fragments/header::body"></div>
 <div class="custom-container">
-    <div class="row" th:each="message : ${messages}">
-        <div class="offset-xs-1 col-xs-10 offset-md-2 col-md-8 no-padding">
-            <div class="alert alert-danger" th:classappend="'alert-' + ${message.type}" th:text="${message.text}"></div>
-        </div>
-    </div>
+    <meta th:include="/fragments/error::body">
     <form autocomplete="off" action="#" th:action="@{/registration}" th:object="${accountForm}" method="post">
         <div class="row">
             <input class="offset-xs-1 col-xs-10 offset-md-2 col-md-8 form-control-lg form-control mb-1" type="text"
