--- a/src/main/webapp/templates/registration.html
+++ b/src/main/webapp/templates/registration.html
@@ -17,7 +17,7 @@
             <input class="offset-xs-1 col-xs-10 offset-md-2 col-md-8 form-control-lg form-control mb-1" type="password"
                    placeholder="Пароль" required="required" th:field="*{password}">
             <input class="offset-xs-1 col-xs-10 offset-md-2 col-md-8 form-control-lg form-control mb-1" type="password"
-                   placeholder="Повторите пароль" required="required" th:field="*{confirmPassword}">
+                   placeholder="Повторите пароль" required="required" name="confirmPassword">
             <button class="offset-xs-1 col-xs-10 offset-md-2 col-md-8 btn btn-lg btn-block btn-primary">
                 Зарегистрироваться
             </button>
