Fix header and footer

--- a/src/main/webapp/templates/fragments/footer.html
+++ b/src/main/webapp/templates/fragments/footer.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <div class="text-lg-center font-footer">
-    <p>Дипломный проект <a href="#">Test</a></p>
+    <p>Дипломный проект <a href="#">CloudStorage</a> 2016г.</p>
 </div>
 </body>
 </html>
