--- a/src/main/webapp/templates/fragments/header.html
+++ b/src/main/webapp/templates/fragments/header.html
@@ -6,7 +6,7 @@
         <div class="navbar edit-padding">
             <a th:href="${isLogged} ? '/cloud' : '/'"><h3 class="navbar-brand"><img th:src="@{/static/img/server.svg}"> CloudStorage</h3></a>
             <nav class="custom-nav" th:if="${!isLogged}">
-                <a class="nav-link" th:classappend="(${#strings.equals(#httpServletRequest.requestURI, '/')} ? 'active')" th:href="@{/}">Инфо</a>
+                <a class="nav-link" th:classappend="(${#strings.equals(#httpServletRequest.requestURI, '/')} or ${#strings.contains(#httpServletRequest.requestURI, '/info')} ? 'active')" th:href="@{/}">Инфо</a>
                 <a class="nav-link" th:classappend="(${#strings.contains(#httpServletRequest.requestURI, '/registration')} ? 'active')" th:href="@{/registration}">Регистрация</a>
                 <a class="nav-link" th:classappend="(${#strings.contains(#httpServletRequest.requestURI, '/login')} ? 'active')" th:href="@{/login}">Войти</a>
             </nav>
