Fix autologin after change name

--- a/src/main/webapp/templates/cloud.html
+++ b/src/main/webapp/templates/cloud.html
@@ -33,7 +33,7 @@
         </tr>
     </table>
 </div>
-<div class="custom-container">
+<div class="footer-container">
     <div th:include="fragments/footer::body"></div>
 </div>
 </body>
